Add Visual Grid Settings
Add visual grid settings to _variables - This is set to false by default, change to true to and recompile to use the visual grid. Tweak the other variables to taste.

Move grid variable definiitions from _grid.scss to _variables.scss: The $max-width variable needed to be defined in the same file with the visual grid file so that the visual grid width would match the container width, so I just moved all grid variables to variables, because it seemed a better fit.

- Rename _grid.scss to _layout.scss and move from /components to /common, update main.scss accordingly.

--- a/assets/styles/common/_variables.scss
+++ b/assets/styles/common/_variables.scss
@@ -1,3 +1,30 @@
+// Visual grid
+
+// Displays the visual grid when set to true.
+$visual-grid: false;
+//Sets the visual grid color
+$visual-grid-color: #eee;
+// Sets the z-index property of the visual grid. Can be back (behind content) or front (in front of content).
+$visual-grid-index: back;
+// Sets the opacity property of the visual grid.
+$visual-grid-opacity: 0.4;
+
+// Grid system
+$grid-columns: 12;
+$sidebar-columns: 4;
+$max-width: 1170px;
+
+// Breakpoints
+$small-screen: 480px;
+$medium-screen: 620px;
+$large-screen: 955px;
+$wide-screen: 1200px;
+
+$small-screen-up: new-breakpoint(min-width $small-screen);
+$medium-screen-up: new-breakpoint(min-width $medium-screen);
+$large-screen-up: new-breakpoint(min-width $large-screen);
+$wide-screen-up: new-breakpoint(min-width $wide-screen);
+
 // Typography
 $base-font-family: helvetica;
 $heading-font-family: $base-font-family;
