--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -8,12 +8,12 @@
 
 @import "common/mixins";
 @import "common/global";
+@import "common/layout";
 @import "components/buttons";
 @import "components/comments";
 @import "components/forms";
 @import "components/lists";
 @import "components/tables";
-@import "components/grid";
 @import "components/wp-classes";
 @import "layouts/header";
 @import "layouts/sidebar";
@@ -21,4 +21,4 @@
 @import "layouts/pages";
 @import "layouts/posts";
 @import "layouts/tinymce";
-@import "common/typography"
+@import "common/typography";
