--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 /*
-Theme Name:         BourbonySages Rex
+Theme Name:         Bourbon Sage
 Theme URI:          https://roots.io/sage/
 Description:        Fork of Sage 8.4.0 using Bourbon, Neat & Bitters
-Version:            1.0
+Version:            1.1
 Author:             Roots
 Author URI:         https://roots.io/
 Text Domain:        sage
