Fix Visual Grid and breakpoints issues
Fix issue 3, allowing visual grid to change as required by layout.

Remove grid settings from variables.scss

Create assets/grid-settings.scss (holds grid settings and import neat helpers)

Add override to bower.json - import bourbon then the new grid-settings file (allows grid-settings to be injected via wiredep after Bower, and before Neat)

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -3,6 +3,7 @@
 // Automatically injected Bower dependencies via wiredep (never manually edit this block)
 // bower:scss
 @import "../../bower_components/bourbon/app/assets/stylesheets/_bourbon.scss";
+@import "grid-settings.scss";
 @import "../../bower_components/neat/app/assets/stylesheets/_neat.scss";
 // endbower
 
