--- a/assets/styles/grid-settings.scss
+++ b/assets/styles/grid-settings.scss
@@ -25,3 +25,65 @@ $small-screen-up: new-breakpoint(min-width $small-screen);
 $medium-screen-up: new-breakpoint(min-width $medium-screen);
 $large-screen-up: new-breakpoint(min-width $large-screen);
 $wide-screen-up: new-breakpoint(min-width $wide-screen);
+
+// Credit 1: Omega Reset by Josh Fry
+// Credit 2: Code below from Alex Vasquez's Some Like It Neat starter theme
+// https://github.com/digisavvy/some-like-it-neat/blob/master/assets/sass/_grid-settings.scss
+
+// ------------------------------------------------------------
+// Override Neat's grid settings
+// Because sometimes shit doesn't work the way it should.
+// Read about it here: http://www.joshfry.me/blog/2013/05/13/omega-reset-for-bourbon-neat
+//
+// This will stay until Thoughtbot or someone else builds-in a proper
+// fix for this issue.
+//
+// https://github.com/joshfry/omega-reset-for-bourbon-neat
+// Big ups to Josh Fry http://www.joshfry.me
+// ------------------------------------------------------------
+
+$column: golden-ratio(1em, 3) !default; // Column width
+$gutter: golden-ratio(1em, 3) !default; // Gutter between each two columns
+
+// ------------------------------------------------------------
+// Set Bourbon's flex-grid variables to match what Neat is doing
+// http://bourbon.io/docs/#flex-grid
+// ------------------------------------------------------------
+
+$fg-column: $column;
+$fg-gutter: $gutter;
+
+// ------------------------------------------------------------
+// Omega Reset
+// ------------------------------------------------------------
+
+@mixin omega-reset($nth) {
+  &:nth-child(#{$nth}) { margin-right: flex-gutter(); }
+  &:nth-child(#{$nth}+1) { clear: none; }
+}
+
+// ------------------------------------------------------------
+// How to use your Neat grid using Omega Reset
+// ------------------------------------------------------------
+
+// .some-selector {
+// 	@include media($sm) {
+// 		@include span-columns(2);
+// 		@include omega(2n);
+// 	}
+// 	@include media($md) {
+// 		@include omega-reset(2n); // Reset the previous omega declaration set by the preceding rule
+// 		@include span-columns(3); // Set your columns etc.
+// 		@include omega(2n); // Set omega for your tastes here, this now correctly overrides the previous omega rule.
+// 	}
+// 	@include media($mdbg) { // Wash. Rinse. Repeat
+// 		@include omega-reset(2n);
+// 		@include span-columns(2);
+// 		@include omega(4n);
+// 	}
+// 	@include media($hg) {
+// 		@include omega-reset(4n);
+// 		@include span-columns(2);
+// 		@include omega(2n);
+// 	}
+// }
